Rating module modified, CSS fixed, Loader added

--- a/src/app/coin-details/coin-heading/coin-heading.component.html
+++ b/src/app/coin-details/coin-heading/coin-heading.component.html
@@ -1,7 +1,7 @@
 <!--TOP HEADING-->
 <section id="cp-heading">
 
-  <div class="container">
+  <div class="container coinHeadingQuery" >
     <div class="row">
 
       <div class="col-md-8">
@@ -10,16 +10,13 @@
         <h2>{{name}} <span>{{symbol}}</span></h2>
 
         <div class="anchors">
-          <a >Website</a>
-          <a >Explorer</a>
-          <a >Message board</a>
           <span class="label label-default">#coin</span>
           <span class="label label-default">#mineable</span>
         </div>
 
       </div>
 
-      <div class="col-md-4 price-info" align="right">
+      <div class="col-md-4 price-info coinHeadingPriceInfo" align="right">
         <div class="row">
 
           <div class="col-md-8">
@@ -27,8 +24,8 @@
           </div>
 
           <div class="col-md-4">
-            <h4 style="margin-top: 25%;" *ngIf="percent_change_1h > 0" class="in-green-zone">{{percent_change_1h}}% <i class="fa fa-caret-up" aria-hidden="true"></i></h4>
-            <h4 style="margin-top: 25%;" *ngIf="percent_change_1h < 0"  class="in-red-zone">{{percent_change_1h}}% <i class="fa fa-caret-down" aria-hidden="true"></i></h4>
+            <h4 style="margin-top: 25%;" *ngIf="percent_change_1h > 0" class="in-green-zone percentChangeQuery">{{percent_change_1h}}% <i class="fa fa-caret-up" aria-hidden="true"></i></h4>
+            <h4 style="margin-top: 25%;" *ngIf="percent_change_1h < 0"  class="in-red-zone percentChangeQuery">{{percent_change_1h}}% <i class="fa fa-caret-down" aria-hidden="true"></i></h4>
           </div>
 
         </div>
