--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,8 +4,8 @@
     <div class="row">
 
       <div class="col-md-4 left-col">
-        <h3 class="footer-logo">Cryptolive</h3>
-        <p class="footer-copyright">Cryptolive 2018 All Rights Reserved.</p>
+        <h3 class="footer-logo">ICONIX360</h3>
+        <p class="footer-copyright">ICONIX360 2018 All Rights Reserved.</p>
       </div>
 
       <div class="col-md-4 centre-col">
