--- a/src/app/home-page/middle-cta/middle-cta.component.html
+++ b/src/app/home-page/middle-cta/middle-cta.component.html
@@ -43,7 +43,7 @@
       <div class="col-md-2 col-xs-12" style="padding: 15px 0 10px 0;">
 
         <form class="form-horizontal" role="Search">
-          <div class="input-group">
+          <div class="input-group mediaat600" >
             <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
             <div class="input-group-btn">
               <button class="btn btn-default" type="submit"><i style="color: #1DA0B4;" class="glyphicon glyphicon-search"></i></button>
