--- a/src/app/ico/ico-details/ico-details-description/ico-details-description.component.html
+++ b/src/app/ico/ico-details/ico-details-description/ico-details-description.component.html
@@ -40,7 +40,7 @@
 
         </div>
       </div>
-      <div  class="row col-md-4 steve" style="padding-bottom: 5%;">
+      <div id="rattingDivIco" class="row col-md-4 steve" style="padding-bottom: 5%;">
 
 
 
@@ -48,7 +48,7 @@
 
           <!-- Nav tabs -->
           <ul class="nav nav-tabs" role="tablist" style="text-decoration: none">
-            <li role="presentation" class="active">
+            <li id="yourRatingHeader"  role="presentation" class="active">
               <a href="#rating-box" style="color: #327ab7;" aria-controls="rating" role="tab" data-toggle="tab">Your Rating</a>
             </li>
           </ul>
@@ -70,7 +70,7 @@
 
               <div *ngIf="!isLoggedIn" style="margin-top: 5%; margin-bottom: 5%;">
                 <div class="row">
-                  <div class=" col-md-offset-5 col-md-6"><i class="fa fa-ban" style="color: #0097a7; font-size: 500%" aria-hidden="true"></i></div>
+                  <div class=" col-xs-offset-5 col-xs-3 col-md-offset-5 col-md-6"><i class="fa fa-ban" style="color: #0097a7; font-size: 500%" aria-hidden="true"></i></div>
                 </div>
                 <div class="row">
                   <div class="col-md-12" style="text-align: center; font-size: 150%;">You need to be logged in to rate ICO!</div>
