--- a/src/app/ico/ico-details/ico-details-social/ico-details-social.component.html
+++ b/src/app/ico/ico-details/ico-details-social/ico-details-social.component.html
@@ -1,7 +1,7 @@
 <!-- ICO Social Starts -->
 <section id="ico-social" style=" background-color: #F7F7F7;padding-top: 30px;padding-bottom: 30px;">
   <div class="container">
-    <div class="row">
+    <div class="row" id="socialsDiv">
 
       <div class="col-md-2 social">
         <p style="font-size: 1.3em;font-weight: 300;"><i class="fa fa-twitter fa-1.5x" aria-hidden="true"></i> /{{icoDetails.faccebook_url}}</p>
