--- a/src/app/ico/main-page/ico-main-page-planing-ico/ico-main-page-planing-ico.component.html
+++ b/src/app/ico/main-page/ico-main-page-planing-ico/ico-main-page-planing-ico.component.html
@@ -5,7 +5,7 @@
 
       <div class="col-md12">
         <h2>Planning an ICO?</h2>
-        <p>We can help With Wide Range of support of all ICO stages.</p>
+        <p class="ico-we-can-help">We can help With Wide Range of support of all ICO stages.</p>
         <button (click)="gotoPublish()" type="button" class="btn btn-green">LAUNCH ICO</button>
       </div>
 
