--- a/src/app/coin-details/coin-charts/coin-charts.component.html
+++ b/src/app/coin-details/coin-charts/coin-charts.component.html
@@ -4,27 +4,27 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-md-10" style="height: 500px;">
+      <div class="col-md-10 chartMarginBottom"   style="height: 500px;">
         <div id="container" style="width:100%; height:400px;"></div>
       </div>
 
       <div class="col-md-2 cp-right-panel">
-        <div class="row">
+        <div class="row detailsCards">
 
           <div class="col-md-12 cp-right-card">
             <h4>1 Hr</h4>
-            <p *ngIf="percent_change_1h > 0" class="in-green-zone">{{percent_change_1h}}% <i class="fa fa-caret-up pull-right" aria-hidden="true"></i></p>
-            <p *ngIf="percent_change_1h < 0" class="in-red-zone">{{percent_change_1h}}% <i class="fa fa-caret-down pull-right" aria-hidden="true"></i></p>
+            <p *ngIf="percent_change_1h > 0" class="in-green-zone">{{percent_change_1h}}% <i class="fa fa-caret-up pull-right mediaQueryCaret" aria-hidden="true"></i></p>
+            <p *ngIf="percent_change_1h < 0" class="in-red-zone">{{percent_change_1h}}% <i class="fa fa-caret-down pull-right mediaQueryCaret" aria-hidden="true"></i></p>
           </div>
           <div class="col-md-12 cp-right-card">
             <h4>24 Hr</h4>
-            <p *ngIf="percent_change_24h > 0" class="in-green-zone">{{percent_change_24h}}% <i class="fa fa-caret-up pull-right" aria-hidden="true"></i></p>
-            <p *ngIf="percent_change_24h < 0" class="in-red-zone">{{percent_change_24h}}% <i class="fa fa-caret-down pull-right" aria-hidden="true"></i></p>
+            <p *ngIf="percent_change_24h > 0" class="in-green-zone">{{percent_change_24h}}% <i class="fa fa-caret-up pull-right mediaQueryCaret" aria-hidden="true"></i></p>
+            <p *ngIf="percent_change_24h < 0" class="in-red-zone">{{percent_change_24h}}% <i class="fa fa-caret-down pull-right mediaQueryCaret" aria-hidden="true"></i></p>
           </div>
           <div class="col-md-12 cp-right-card">
             <h4>7 DAYS</h4>
-            <p *ngIf="percent_change_7d > 0" class="in-green-zone">{{percent_change_7d}}% <i class="fa fa-caret-up pull-right" aria-hidden="true"></i></p>
-            <p *ngIf="percent_change_7d < 0" class="in-red-zone">{{percent_change_7d}}% <i class="fa fa-caret-down pull-right" aria-hidden="true"></i></p>
+            <p *ngIf="percent_change_7d > 0" class="in-green-zone">{{percent_change_7d}}% <i class="fa fa-caret-up pull-right mediaQueryCaret" aria-hidden="true"></i></p>
+            <p *ngIf="percent_change_7d < 0" class="in-red-zone">{{percent_change_7d}}% <i class="fa fa-caret-down pull-right mediaQueryCaret" aria-hidden="true"></i></p>
           </div>
         </div>
       </div>
