--- a/src/app/home-page/bottom-cards/bottom-cards.component.html
+++ b/src/app/home-page/bottom-cards/bottom-cards.component.html
@@ -2,7 +2,7 @@
 <section id="table-bottom-stats-cards">
 
   <div class="container">
-    <div class="row">
+    <div class="row bottomCardsWidthMargin">
 
       <div class="col-md-offset-3 col-md-2 card-item">
         <h4>COINS</h4>
