--- a/src/app/ico/main-page/ico-main-page-ico-listing/ico-main-page-ico-listing.component.html
+++ b/src/app/ico/main-page/ico-main-page-ico-listing/ico-main-page-ico-listing.component.html
@@ -15,34 +15,52 @@
                 <div class="col-md-4 col-xs-12">
                   <p class="last-cont" style="margin-left: -15px;">{{ico.description}}</p>
                 </div>
-                <div class="col-md-4 col-xs-12 timer" style="margin-top: -38px;">
+                <div class="col-md-4 col-xs-7 timer ico-listing-timer-box" style="margin-top: -38px;">
                   <div class="row col-xs-12">
-                    <p class="end-time">END IN</p>
+                    <p class="end-time end-in-text">END IN</p>
                   </div>
                   <div class="row">
-                    <div class="col-md-12 col-xs-6 endDate">
-                      <div class="col-md-4 col-xs-4">
+                    <div class="col-md-12 col-xs-12 endDate">
+                      <div class="col-md-4 col-xs-3 end-in-timer-divs">
                         <h3 class="end-date">{{countDown_days(ico.end_time)}}</h3>
                         <p class="end-days">Days</p>
                       </div>
-                      <div class="col-md-4 col-xs-4">
+                      <div class="col-md-4 col-xs-3 end-in-timer-divs">
                         <h3 class="end-date">{{countDown_hours(ico.end_time)}}</h3>
                         <p class="end-hours">Hours</p>
                       </div>
-                      <div class="col-md-4 col-xs-4">
+                      <div class="col-md-4 col-xs-3 end-in-timer-divs minutes-div">
                         <h3 class="end-date">{{countDown_minutes(ico.end_time)}}</h3>
                         <p class="end-minut">Minutes</p>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-xs-7 col-xs-offset-5">
+
+
                   <div class="row">
-                    <div class="col-md-6 col-xs-6 rateDiv" style="width: 100%; margin-top: -60px; color: rgb(53, 160, 179);">
+                    <div class="col-md-6 col-xs-6 rateDiv" style="width: 100%;   margin-top: -34% ;
+                                  margin-right: -70% ; color: rgb(53, 160, 179);">
                       <h1 class="rating-number">{{((icoRatingListConcept[i]+icoRatingListTeam[i]+icoRatingListWhitepaper[i])/((icoRatingListTotalCount[i]-1)*3)).toFixed(1)}} <sub class="subscript-rating" style="font-size: 0.4em;">/5</sub></h1>
                       <!--<p class="rating-icon-fa"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>-->
-                      <p class="beforeIcon-ratingStar-text">Based on {{(icoRatingListTotalCount[i])}} reviews over the past year</p>
+
+                      <p *ngIf="icoRatingListTotalCount[i]==0" class="beforeIcon-ratingStar-text">Based on 0 reviews over the past year</p>
+
+                      <p *ngIf="icoRatingListTotalCount[i]!=0" class="beforeIcon-ratingStar-text">Based on {{(icoRatingListTotalCount[i]-1)}} reviews over the past year</p>
                     </div>
+
+
+                    <div class="col-md-6 col-xs-6 rateDiv2" style="display:none; width: 100%; color: rgb(53, 160, 179);">
+                      <h1 class="rating-number">{{((icoRatingListConcept[i]+icoRatingListTeam[i]+icoRatingListWhitepaper[i])/((icoRatingListTotalCount[i]-1)*3)).toFixed(1)}} <sub class="subscript-rating" style="font-size: 0.4em;">/5</sub></h1>
+                      <!--<p class="rating-icon-fa"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>-->
+
+                      <p *ngIf="icoRatingListTotalCount[i]==0" class="beforeIcon-ratingStar-text">Based on 0 reviews over the past year</p>
+
+                      <p *ngIf="icoRatingListTotalCount[i]!=0" class="beforeIcon-ratingStar-text">Based on {{(icoRatingListTotalCount[i]-1)}} reviews over the past year</p>
+                    </div>
+
+
                   </div>
                 </div>
               </div>
