--- a/src/assets/css/stacktable.css
+++ b/src/assets/css/stacktable.css
@@ -12,6 +12,6 @@
 .stacktable.small-only { display: none; }
 
 @media (max-width: 800px) {
-  .stacktable.large-only { display: none; }
+  /*.stacktable.large-only { display: none; }*/
   .stacktable.small-only { display: table; }
 }
