--- a/src/assets/css/style-main.css
+++ b/src/assets/css/style-main.css
@@ -1040,3 +1040,344 @@ body {
 }
 
 }
+
+
+
+
+
+@media only screen and (max-width: 600px) {
+  #ico-stats-brief .launch-card {
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+  .shadow-ratedDiv{
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+  #noVideoText{
+    margin-left: 5% !important;
+    width: 70%;
+    margin-top: 2%;
+  }
+
+  #rattingDivIco{
+    margin-top: 35%;
+    margin-bottom: 5%;
+  }
+  #yourRatingHeader{
+    margin-left: 3%;
+  }
+  #socialsDiv{
+    text-align: center;
+  }
+  #ico-stats-brief{
+    margin-top: 100px;
+  }
+  #navbartoggleThreeBars{
+    margin-right: 8%;
+  }
+  #coinsListTable{
+    margin-top: -3% !important;
+    margin-left: 5% !important;
+  }
+  #ico-top-panel{
+    margin-top: 20%;
+  }
+  .ico-panel-card{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-bottom: 1%;
+    width: 100%;
+  }
+  #ico-search{
+    margin-left: 0% !important;
+  }
+
+  .table1-eta{
+    display: none;
+  }
+
+  .table1-social{
+    display: none;
+  }
+
+  .table1-name-iconame{
+    display: none;
+  }
+
+  .table2-name-iconame{
+    display: none;
+  }
+
+
+
+  .table1-name-logo{
+    width: 100% !important;
+    margin-top: 0px;
+  }
+
+  .table1-name-logo > img{
+    margin-top: 0px !important;
+    margin-left: 7%;
+  }
+
+  .table2-name-logo{
+    width: 100% !important;
+    margin-top: 0px;
+  }
+
+  .table2-name-logo > img{
+    margin-top: 0px !important;
+    margin-left: 7%;
+  }
+
+  .ico-listing-timer-box{
+    margin-top: 0px !important;
+    padding-left: 0 !important;
+  }
+
+  .end-in-text{
+    margin: 0 !important;
+  }
+
+  .end-in-timer-divs{
+    padding-right: 0;
+    padding-left: 0;
+    text-align: center;
+  }
+
+  .end-in-timer-divs > h3{
+    margin-top: 30% !important;
+  }
+
+  .minutes-div{
+    margin-left: 3% !important;
+  }
+
+  .beforeIcon-ratingStar-text{
+    font-size: 0.7em !important;
+  }
+
+  .rateDiv{
+    display: none;
+  }
+
+  .rateDiv2{
+    display: block !important;
+    margin-top: -52% !important;
+  }
+
+  .ico-we-can-help{
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+
+  .ico-tables{
+    width:96% !important;
+  }
+
+  .table2-name{
+    width: 17% !important;
+  }
+
+  .modal-content{
+    width:95%;
+  }
+
+  .popupInput{
+    width: 100% !important;
+  }
+
+  .popupFileUpload{
+    margin-left: 16px !important;
+    width: 100% !important;
+  }
+
+  .ico-tables{
+    font-size: 0.8em !important;
+  }
+
+  .ico-panel-card{
+    margin-bottom: 3% !important;
+  }
+
+  .coinHeadingQuery{
+    text-align: center !important;
+  }
+
+  .coinHeadingPriceInfo{
+    text-align: center !important;
+  }
+
+  .currency-icon{
+    float: inherit !important;
+    width: 20% !important;
+    margin-left: 41% !important;
+    margin-bottom: -2%;
+  }
+
+  .percentChangeQuery{
+    margin-top: 0% !important;
+  }
+
+  .detailsCards{
+    margin-bottom: 12%;
+  }
+
+  .detail-cards > div{
+    padding-top: 3%;
+    padding-bottom: 3%;
+    margin-right: 5% !important;
+    margin-left: 5%;
+  }
+
+  .detailsCards > div{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-right: 5% !important;
+    margin-left: 5%;
+    margin-top: 2% !important;
+  }
+
+  .mediaQueryCaret{
+    float: initial !important;
+  }
+
+  .chartMarginBottom{
+    height: 420px !important;
+  }
+
+}
+
+
+
+.featureContainer:nth-child(1){
+  display: none !important;
+}
+
+.bottomCardsWidthMargin{
+  margin-left: 1%;
+  width: 95%;
+  margin-right: 1%;
+}
+
+
+
+
+
+/* FOR LOADER */
+.showbox {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 5%;
+}
+
+.loader {
+  position: relative;
+  margin: 0 auto;
+  width: 100px;
+}
+.loader:before {
+  content: '';
+  display: block;
+  padding-top: 100%;
+}
+
+.circular {
+  -webkit-animation: rotate 2s linear infinite;
+  animation: rotate 2s linear infinite;
+  height: 100%;
+  -webkit-transform-origin: center center;
+  transform-origin: center center;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.path {
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  -webkit-animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  stroke-linecap: round;
+}
+
+@-webkit-keyframes rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -35px;
+  }
+  100% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -124px;
+  }
+}
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -35px;
+  }
+  100% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -124px;
+  }
+}
+@-webkit-keyframes color {
+  100%,
+  0% {
+    stroke: #d62d20;
+  }
+  40% {
+    stroke: #0057e7;
+  }
+  66% {
+    stroke: #008744;
+  }
+  80%,
+  90% {
+    stroke: #ffa700;
+  }
+}
+@keyframes color {
+  100%,
+  0% {
+    stroke: #d62d20;
+  }
+  40% {
+    stroke: #0057e7;
+  }
+  66% {
+    stroke: #008744;
+  }
+  80%,
+  90% {
+    stroke: #ffa700;
+  }
+}
